mobile style fixes
comments were too narrow
fix padding of post controls

--- a/src/css/comment.less
+++ b/src/css/comment.less
@@ -61,7 +61,7 @@
     }
 
     .comment-content {
-      .add-avatar-margin(@avatar-size-sm+45);
+      .add-avatar-margin(@avatar-size-sm+45, false);
       padding-right: 40px;
       max-width: 100%;
       word-wrap: break-word;
@@ -106,7 +106,7 @@
 
     textarea {
       padding: 0;
-      width: 80%;
+      width: 90%;
       position: relative;
       top: 3px;
     }
@@ -137,7 +137,6 @@
       padding-left: 10px;
       padding-right: 10px;
       margin: 0;
-      width: 80%;
     }
   }
   .add-comment {
