--- a/src/css/post.less
+++ b/src/css/post.less
@@ -179,6 +179,7 @@
       margin-left: -10px;
       margin-right: -10px;
       padding-left: 23px;
+      padding-bottom: 2px;
     }
 
     > a {
